--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,77 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/07/metadata">
     <types>
-        <members>*</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>CustomMetadata</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>Flow</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>FlowCategory</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>FlowDefinition</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>GlobalValueSet</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>GlobalValueSetTranslation</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>Group</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>HomePageComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>HomePageLayout</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>Index</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>QuickAction</name>
-    </types>
-    <types>
-        <members>*</members>
-        <members>Lead</members>
-        <members>Contact</members>
-        <members>Opportunity</members>
-        <members>Account</members>
-        <members>Contract</members>
-        <members>Case</members>
-        <members>Quote</members>
-        <members>Event</members>
-        <members>Order</members>
-        <members>User</members>
+        <members>Task</members>
         <name>CustomObject</name>
     </types>
     <version>55.0</version>
